--- a/package.json
+++ b/package.json
@@ -3,11 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@progress/kendo-date-math": "^1.5.4",
+    "@progress/kendo-drawing": "^1.16.0",
+    "@progress/kendo-licensing": "^1.2.1",
+    "@progress/kendo-react-animation": "^4.12.0",
+    "@progress/kendo-react-buttons": "^4.12.0",
+    "@progress/kendo-react-common": "^4.12.0",
+    "@progress/kendo-react-dateinputs": "^4.12.0",
+    "@progress/kendo-react-dialogs": "^4.12.0",
+    "@progress/kendo-react-dropdowns": "^4.12.0",
+    "@progress/kendo-react-form": "^4.12.0",
+    "@progress/kendo-react-inputs": "^4.12.0",
+    "@progress/kendo-react-intl": "^4.12.0",
+    "@progress/kendo-react-popup": "^4.12.0",
+    "@progress/kendo-react-scheduler": "^4.12.0",
+    "@progress/kendo-react-treeview": "^4.12.0",
+    "@progress/kendo-theme-default": "^4.42.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^16.14.0",
+    "react-appointment-picker": "^3.2.0",
+    "react-dom": "^16.14.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
   },
